--- a/recipes/RAG/Granite_Docling_RAG.ipynb
+++ b/recipes/RAG/Granite_Docling_RAG.ipynb
@@ -3,6 +3,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/roopendraganesh01/docs/blob/main/recipes/RAG/Granite_Docling_RAG.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "U48hO1_V_JRG",
         "pycharm": {
           "name": "#%% md\n"
@@ -1388,7 +1398,8 @@
   ],
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "language_info": {
       "name": "python"
